@@ -219,6 +219,8 @@ body {
 
 <p><strong>save_oncutscene</strong> | <code>bool</code> | Saves the game when triggering any cutscene via an Event.</p>
 
+<p><strong>save_onstash</strong> | <code>[bool, "private", "shared"]</code> | Saves the game when changing the contents of a stash. The default is true (i.e. save when using both stash types). Use caution with the values &ldquo;private&rdquo; and false, since not saving shared stashes exposes an item duplication exploit.</p>
+
 <p><strong>save_anywhere</strong> | <code>bool</code> | Saves the game when using a button.</p>
 
 <p><strong>camera_speed</strong> | <code>float</code> | Modifies how fast the camera moves to recenter on the player. Larger values mean a slower camera. Default value is 10.</p>
