@@ -34,6 +34,7 @@ Engine features:
 * Added 'requires_status' and 'requires_not_status' to powers and upgrades in power trees. 'visible_requires_status' and 'visible_requires_not_status' have been marked as deprecated.
 * Added 'on_interact' as a possible value for Event types. Essentially the same as 'on_trigger', except the event can ONLY be activated through the hotspot.
 * Support an arbitrary number of Stash tabs. Each tab has a display name and an 'is_private' flag.
+* Added 'save_onstash' property to engine/misc.txt, so it is now possible to disable the automatic save when modifying stash contents.
 
 Engine fixes:
 
